# message_board

./: .gitignore  README.md  pyproject.toml
src/client/: message_board_client.py
src/client/app/: client.py  example_usage.py  him.py  monitor.py
src/client/application/: client.py  him.py  monitor.py
src/server/: flask_app.py  manage_db.py  run.py
src/server/app/: extensions.py  storage.py
src/server/app/auth/: routes.py
src/server/application/: __init__.py  config.py  models.py  storage.py
src/server/application/admin/: routes.py
src/server/application/auth/: routes.py
src/server/application/messaging/: routes.py
